...
)

// creating a list of all settings to implement them with a simple loop
val listOfSettings =
    listOf(
        // Redirects to the app's page in the device settings.
        SettingBar("Permissions", "permissions", Icons.Outlined.Lock, "lock icon"),
        // Switches the app's theme between light and dark mode.
        SettingBar("Theme", "theme", Icons.Outlined.DarkMode, "theme"))

// reusable function that is called to add a section to settings
@Composable
fun TextButtonFun(settingBar: SettingBar, onClick: () -> Unit = {}) {
  TextButton(
      onClick = { onClick() },
...
) {
  val context = LocalContext.current
  Scaffold(
      topBar = {
        TopNavigationMenu(
            textTestTag = "SettingsText",
            title = "Settings",
            navigationIcon = {
              IconButton(
                  onClick = { navigationActions.goBack() },
                  modifier = Modifier.testTag("back_button")) {
                    androidx.compose.material.Icon(
                        Icons.Outlined.ArrowBackIosNew,
...
  val radioOptions = AppThemeValue.entries.toTypedArray()
  // Selected option for the theme switch dialog and the setter to update it
  val (selectedOption, onOptionSelected) =
      remember { mutableStateOf(appThemeViewModel.currentTheme.value) }

  AlertDialog(
      modifier = Modifier.testTag("settingsThemeDialog"),
      icon = {
        Icon(
            imageVector = Icons.Outlined.DarkMode,
            contentDescription = "theme",
            modifier =
                Modifier.size(AppDimensions.iconSizeLarge).testTag("settingsThemeDialogIcon"))
...
            onClick = {
              appThemeViewModel.saveTheme(selectedOption)
              onDismissRequest()
            }) {
              Text(
                  "Confirm",
                  modifier = Modifier.testTag("settingsThemeDialogConfirm"),
                  color = MaterialTheme.colorScheme.primary)
            }
      },
      dismissButton = {
        TextButton(onClick = onDismissRequest) {
          Text(
...
